emmett/test/bad/expr-mismatch.emt
Probe foo = "string" + 1;
